Dont cache api requests

--- a/03-cache/resources/config/ssl-cache.conf
+++ b/03-cache/resources/config/ssl-cache.conf
@@ -14,6 +14,9 @@
   ProxyPassReverse / https://0.0.0.0:9009/
 
   # Cache
+  CacheHeader on
+  CacheEnable disk /webjars
+  CacheDisable "/api"
   CacheQuickHandler off
   CacheLock On
   CacheRoot /tmp/cache/mod_cache
@@ -51,10 +54,6 @@
     ProxyPassReverse /
     Options FollowSymLinks
     Require all granted
-
-     # Cache
-    CacheEnable disk /
-    CacheHeader on
   </Location>
 
 </VirtualHost>
